--- a/web/manifest.plist
+++ b/web/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://cpms.it.chinamobile.com/pms/cpms_apps/pms_ios_1.0.0.ipa</string>
+					<string>http://101.132.139.88/app.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
